[tool.poetry]
name = "FAST-text-detection"
version = "0.1.0"
description = ""
authors = ["others"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pip = "23.0.1"
torch = "^2.0"
torchvision = "^0.15.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.12.0"
mypy = "^1.0.0"
autoflake = "^2.0.2"
isort = "^5.12.0"
vulture = "^2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"